--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>3 items that I like to buy with my salary:</h2>
+	<ol>
+		<li data-ns-test="shoppingList">Laptop</li>
+		<li data-ns-test="shoppingList">Gold</li>
+		<li data-ns-test="shoppingList">Watch</li>
+	</ol>
+
+	<h2>3 places I like to visit after I got a job</h2>
+	<ul>
+		<li data-ns-test="holidayList">Kerala</li>
+		<li data-ns-test="holidayList">Bali</li>
+		<li data-ns-test="holidayList">Ladakh</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
